# capitalist-pigs

./: .gitattributes  .gitignore  Forc.toml  README.md  build.sh  chain.sh  chainConfig.json
.fueldb/: 000050.sst  000051.sst  000052.sst  IDENTITY  LOG  LOG.old.1666956344392257  LOG.old.1666956420019781  LOG.old.1666956495207433  MANIFEST-000058
contract/: Forc.toml
contract/src/: main.sw
contracts/: Forc.toml
contracts/bacon/: Forc.toml
contracts/bacon/src/: errors.sw
contracts/bacon_distributor/src/: errors.sw
contracts/piglets/: Cargo.toml  Forc.toml
contracts/piglets/src/: factory_interface.sw  interface.sw  main.sw  staking_interface.sw
contracts/pigs/: Cargo.toml
contracts/pigs/src/: interface.sw
contracts/src/: main.sw
contracts/src/bacon_distributor/: Forc.toml
contracts/src/mock_contract/: Forc.toml
contracts/src/mucus/: Forc.toml
contracts/src/pigs/: Forc.toml
contracts/src/staking/: Forc.toml
contracts/src/tests/: harness.rs
contracts/src/truffle_exchange_contract/: Cargo.toml  Forc.toml
contracts/src/truffle_exchange_contract/src/: main.sw
contracts/src/truffle_exchange_contract/tests/: harness.rs
contracts/src/truffles/: Cargo.toml  Forc.toml
contracts/src/truffles/src/: data_structures.sw  interface.sw  main.sw
contracts/src/truffles/tests/: harness.rs
contracts/src/truffles_pool/: Forc.toml
contracts/staking/: Forc.toml
contracts/truffles_pool/: Forc.toml
frontend/: arweave-wallet.json  next.config.js  package-lock.json  package.json
frontend/src/: .gitignore
frontend/stores/: useAllOutLifeStore.tsx
(+80 files in other folders)
