[package]
authors = ["ETHLisbon Capitalist Pigs"]
edition = "2022"
license = "Apache-2.0"
name = "tests"
version = "0.0.0"

[dependencies]
fuel-gql-client = { version = "0.6", default-features = false }
fuel-tx = "0.19.0"
fuels-types = "0.23.0"
fuels-abigen-macro = "0.23.0"
fuels = "0.23.0"
rand = "0.8.5"
tokio = { version = "1.21.0", features = ["rt", "macros"] }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"